--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,13 @@ ul {
   border: 0;
   background-color: transparent;
   color: #ffffff;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 736px) {
+  .logo__menu {
+    display: none;
+  }
 }
 
 .logo__icon {
@@ -130,9 +137,15 @@ ul {
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 735px) {
   .page-header__button {
     display: none;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .page-header__button {
+    display: block;
   }
 }
 
@@ -1001,6 +1014,7 @@ ul {
   border: none;
   top: 8px;
   right: 8px;
+  cursor: pointer;
 }
 
 .mobile__title {
@@ -1075,6 +1089,7 @@ ul {
   border: none;
   top: 8px;
   right: 8px;
+  cursor: pointer;
 }
 
 .head-mobile__link {
