--- a/css/main.css
+++ b/css/main.css
@@ -79,12 +79,17 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
   padding-top: 17px;
   padding-bottom: 17px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .page-header__block {
+    width: 100%;
+  }
 }
 
 .logo {
@@ -96,8 +101,23 @@ ul {
   color: #ffffff;
 }
 
+@media screen and (min-width: 736px) {
+  .logo__text {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.3;
+  }
+}
+
 .logo__text2 {
   color: #ffffff;
+}
+
+@media screen and (min-width: 736px) {
+  .logo__text2 {
+    font-size: 18px;
+    line-height: 1.16;
+  }
 }
 
 .logo__menu {
@@ -115,8 +135,31 @@ ul {
   }
 }
 
+@media screen and (min-width: 736px) {
+  .logo {
+    margin-right: 20px;
+  }
+}
+
 .logo__icon {
   fill: #ffffff;
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .conteiner__flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .logo__img {
+    width: 59px;
+  }
 }
 
 @media screen and (max-width: 319px) {
@@ -146,18 +189,60 @@ ul {
 @media screen and (min-width: 736px) {
   .page-header__button {
     display: block;
+    width: 186px;
+    padding: 13px 17px 17px 17px;
+    margin-left: auto;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    color: #ffffff;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 22px;
+    background: transparent;
   }
 }
 
 @media screen and (max-width: 319px) {
-  .page-nav {
+  .page__nav {
     display: none;
   }
 }
 
 @media screen and (min-width: 320px) {
-  .page-nav {
+  .page__nav {
     display: none;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .page__nav {
+    display: block;
+    position: absolute;
+    top: 101px;
+    margin-top: 20px;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .page-nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .page-nav__item:not(:last-child) {
+    margin-right: 32px;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .page-nav__link {
+    font-size: 16px;
+    line-height: 1.18;
+    color: #ffffff;
   }
 }
 
@@ -181,6 +266,21 @@ ul {
   }
 }
 
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .hero {
+    background-image: url(../images/fon736.jpg);
+    padding-top: 165px;
+    padding-bottom: 24px;
+    min-height: 636px;
+  }
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 736px) and (max-width: 1087px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/fon736@2x.jpg);
+  }
+}
+
 .hero__title {
   font-family: PT Serif;
   font-weight: 700;
@@ -190,13 +290,30 @@ ul {
   color: #ffffff;
 }
 
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .hero__title {
+    font-size: 64px;
+    line-height: 1.29;
+    width: 440px;
+    margin-bottom: 29px;
+  }
+}
+
 .hero__text {
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
   margin-bottom: 37px;
-  max-width: 288px;
   color: #ffffff;
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .hero__text {
+    font-size: 18px;
+    line-height: 1.38;
+    width: 394px;
+    margin-bottom: 35px;
+  }
 }
 
 .hero__link {
@@ -215,6 +332,20 @@ ul {
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 736px) {
+  .hero__link {
+    max-width: 250px;
+    max-height: 60px;
+    border-radius: 30px;
+    padding: 19px 0 20px 0;
+    font-size: 18px;
+    line-height: 1.16;
+    margin-right: start;
+    margin-left: 0;
+    margin-bottom: 73px;
+  }
 }
 
 .hero__icon {
