--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,6 +13,15 @@
   }
   padding-top: 111px;
   padding-bottom: 23px;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    background-image: url(../images/fon736.jpg);
+    padding-top: 165px;
+    padding-bottom: 24px;
+    min-height: 636px;
+    @media (min-resolution: 2dppx) {
+      background-image: url(../images/fon736@2x.jpg);
+    }
+  }
 }
 
 .hero__title {
@@ -22,14 +31,26 @@
   line-height: 52px;
   margin-bottom: 13px;
   color: $whiteColor;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    font-size: 64px;
+    line-height: 1.29;
+    width: 440px;
+    margin-bottom: 29px;
+  }
 }
 .hero__text {
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
   margin-bottom: 37px;
-  max-width: 288px;
+  // max-width: 288px;
   color: $whiteColor;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    font-size: 18px;
+    line-height: 1.38;
+    width: 394px;
+    margin-bottom: 35px;
+  }
 }
 .hero__link {
   display: block;
@@ -47,6 +68,17 @@
   text-align: center;
   text-transform: uppercase;
   color: $whiteColor;
+  @media screen and (min-width: 736px) {
+    max-width: 250px;
+    max-height: 60px;
+    border-radius: 30px;
+    padding: 19px 0 20px 0;
+    font-size: 18px;
+    line-height: 1.16;
+    margin-right: start;
+    margin-left: 0;
+    margin-bottom: 73px;
+  }
 }
 
 .hero__icon {
