--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,20 +14,30 @@
 }
 .page-header__block {
   display: flex;
-  width: 100%;
   padding-top: 17px;
   padding-bottom: 17px;
   align-items: center;
+  @media screen and (min-width: 320px) and (max-width: 735px) {
+    width: 100%;
+  }
 }
 .logo {
   margin-right: 15px;
   &__text {
     font-family: PT Serif;
-
     color: $whiteColor;
+    @media screen and (min-width: 736px) {
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 1.3;
+    }
   }
   &__text2 {
     color: $whiteColor;
+    @media screen and (min-width: 736px) {
+      font-size: 18px;
+      line-height: 1.16;
+    }
   }
   &__menu {
     margin-left: auto;
@@ -40,9 +50,23 @@
       display: none;
     }
   }
+  @media screen and (min-width: 736px) {
+    margin-right: 20px;
+  }
 }
 .logo__icon {
   fill: $whiteColor;
+}
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .conteiner__flex {
+    display: flex;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 736px) {
+  .logo__img {
+    width: 59px;
+  }
 }
 .page-header__contacts {
   @media screen and (max-width: 319px) {
@@ -61,13 +85,51 @@
   }
   @media screen and (min-width: 736px) {
     display: block;
+    width: 186px;
+    padding: 13px 17px 17px 17px;
+    margin-left: auto;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    color: $whiteColor;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 22px;
+    background: transparent;
   }
 }
-.page-nav {
+.page__nav {
   @media screen and (max-width: 319px) {
     display: none;
   }
   @media screen and (min-width: 320px) {
     display: none;
+  }
+  @media screen and (min-width: 736px) {
+    display: block;
+    position: absolute;
+    top: 101px;
+    margin-top: 20px;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .page-nav__list {
+    display: flex;
+  }
+}
+
+.page-nav__item {
+  @media screen and (min-width: 736px) {
+    &:not(:last-child) {
+      margin-right: 32px;
+    }
+  }
+}
+.page-nav__link {
+  @media screen and (min-width: 736px) {
+    font-size: 16px;
+    line-height: 1.18;
+    color: $whiteColor;
   }
 }
