--- a/sass/components/_categories.scss
+++ b/sass/components/_categories.scss
@@ -1,6 +1,10 @@
 .categories {
   padding-top: 16px;
   padding-bottom: 16px;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 .categories__subtitle {
   font-style: normal;
@@ -18,5 +22,17 @@
   border-radius: 6px;
   &:not(:last-child) {
     margin-bottom: 16px;
+    @media screen and (min-width: 736px) {
+      margin-bottom: 32px;
+    }
+  }
+  @media screen and (min-width: 736px) {
+    margin-left: 32px;
+  }
+}
+.categories__card {
+  @media screen and (min-width: 736px) {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
