--- a/css/main.css
+++ b/css/main.css
@@ -444,27 +444,58 @@ ul {
   background-color: rgba(112, 207, 41, 0.07);
 }
 
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .directions {
+    padding-bottom: 31px;
+  }
+}
+
 .directions__title {
   font-family: PT Serif;
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
-  line-height: 29px;
+  line-height: 1.31;
   text-align: center;
   color: #000000;
   margin-bottom: 26px;
+}
+
+@media screen and (min-width: 736px) {
+  .directions__title {
+    font-size: 30px;
+    line-height: 1.3;
+    margin-bottom: 50px;
+  }
 }
 
 .directions__item {
   text-align: center;
 }
 
-.directions__item:not(:last-child) {
-  margin-bottom: 26px;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .directions__item:not(:last-child) {
+    margin-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .directions__item {
+    width: 320px;
+    margin-left: 32px;
+    margin-bottom: 23px;
+  }
 }
 
 .directions__link {
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .directions__link {
+    display: block;
+    text-align: start;
+  }
 }
 
 .directions__text {
@@ -472,6 +503,31 @@ ul {
   line-height: 21px;
   text-align: center;
   color: #333333;
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .directions__text {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .directions__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .directions__icon {
+    display: inline-block;
+  }
 }
 
 .suggestions {
