--- a/sass/components/_directions.scss
+++ b/sass/components/_directions.scss
@@ -2,29 +2,63 @@
   padding-top: 44px;
   padding-bottom: 60px;
   background-color: rgba(112, 207, 41, 0.07);
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    padding-bottom: 31px;
+  }
 }
 .directions__title {
   font-family: PT Serif;
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
-  line-height: 29px;
+  line-height: 1.31;
   text-align: center;
   color: $textColor;
   margin-bottom: 26px;
+  @media screen and (min-width: 736px) {
+    font-size: 30px;
+    line-height: 1.3;
+    margin-bottom: 50px;
+  }
 }
 .directions__item {
   text-align: center;
   &:not(:last-child) {
-    margin-bottom: 26px;
+    @media screen and (min-width: 320px) and (max-width: 735px) {
+      margin-bottom: 26px;
+    }
+  }
+  @media screen and (min-width: 736px) {
+    width: 320px;
+    margin-left: 32px;
+    margin-bottom: 23px;
   }
 }
 .directions__link {
   margin-bottom: 16px;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    display: block;
+    text-align: start;
+  }
 }
 .directions__text {
   font-size: 16px;
   line-height: 21px;
   text-align: center;
   color: $colorPtext;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    text-align: start;
+  }
+}
+.directions__list {
+  @media screen and (min-width: 736px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+.directions__icon {
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    display: inline-block;
+  }
 }
