--- a/css/main.css
+++ b/css/main.css
@@ -413,7 +413,6 @@ ul {
   .categories__item {
     margin-left: 32px;
     margin-top: 32px;
-    width: 320px;
   }
 }
 
@@ -535,6 +534,13 @@ ul {
   padding-bottom: 32px;
 }
 
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .suggestions {
+    padding-top: 33px;
+    padding-bottom: 40px;
+  }
+}
+
 .suggestions__title {
   font-family: PT Serif;
   font-style: normal;
@@ -546,8 +552,37 @@ ul {
   margin-bottom: 7px;
 }
 
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .suggestions__title {
+    font-size: 30px;
+    line-height: 1.33;
+    max-width: 403px;
+    margin-bottom: 24px;
+  }
+}
+
 .suggestions__item:not(:last-child) {
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .suggestions__item {
+    width: 320px;
+  }
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .suggestions__img {
+    width: 320px;
+  }
+}
+
+.suggestions__item-datsan {
+  width: 671px;
+}
+
+.suggestions__img-width {
+  width: 671px;
 }
 
 .suggestions__subtitle {
@@ -595,6 +630,12 @@ ul {
 @media screen and (min-width: 320px) and (max-width: 735px) {
   .suggestions__item-hidden {
     display: none;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .suggestions__item-hidden {
+    display: block;
   }
 }
 
