--- a/sass/components/_categories.scss
+++ b/sass/components/_categories.scss
@@ -31,7 +31,7 @@
   @media screen and (min-width: 736px) and (max-width: 1087px) {
     margin-left: 32px;
     margin-top: 32px;
-    width: 320px;
+    // width: 320px;
   }
 }
 .categories__card {
