--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -37,10 +37,14 @@
   }
 }
 .suggestions__item-datsan {
-  width: 671px;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    width: 671px;
+  }
 }
 .suggestions__img-width {
-  width: 671px;
+  @media screen and (min-width: 736px) and (max-width: 1087px) {
+    width: 671px;
+  }
 }
 .suggestions__subtitle {
   font-weight: 500;
