--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -23,12 +23,24 @@
     margin-bottom: 24px;
   }
 }
+.suggestions__list {
+  @media screen and (min-width: 736px) {
+    flex-wrap: wrap;
+    display: flex;
+    margin: -18px;
+  }
+}
 .suggestions__item {
   &:not(:last-child) {
-    margin-bottom: 16px;
+    @media screen and(min-width:320px) and (max-width: 735px) {
+      margin-bottom: 16px;
+    }
   }
   @media screen and (min-width: 736px) and (max-width: 1087px) {
     width: 320px;
+  }
+  @media screen and (min-width: 736px) {
+    margin: 18px;
   }
 }
 .suggestions__img {
@@ -117,4 +129,9 @@
   text-align: center;
   color: $whiteColor;
   max-width: 236px;
+}
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .offer__img {
+    width: 320px;
+  }
 }
