--- a/css/main.css
+++ b/css/main.css
@@ -561,13 +561,32 @@ ul {
   }
 }
 
-.suggestions__item:not(:last-child) {
-  margin-bottom: 16px;
+@media screen and (min-width: 736px) {
+  .suggestions__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: -18px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .suggestions__item:not(:last-child) {
+    margin-bottom: 16px;
+  }
 }
 
 @media screen and (min-width: 736px) and (max-width: 1087px) {
   .suggestions__item {
     width: 320px;
+  }
+}
+
+@media screen and (min-width: 736px) {
+  .suggestions__item {
+    margin: 18px;
   }
 }
 
@@ -675,6 +694,12 @@ ul {
   text-align: center;
   color: #ffffff;
   max-width: 236px;
+}
+
+@media screen and (min-width: 736px) and (max-width: 1087px) {
+  .offer__img {
+    width: 320px;
+  }
 }
 
 .map {
